<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.serendipity.chengzhengqian.scriptor.MainActivity"
        android:layout_gravity="bottom"
        >
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical"
                  tools:layout_editor_absoluteY="8dp"
                  tools:layout_editor_absoluteX="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:id="@+id/directory_layout">
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <Button
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:id="@+id/engintype"
                            android:onClick="switchEngine"
                            android:background="@android:color/transparent"
                            android:textColor="#ffffff"
                            />
                    <Button
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/server"
                            android:onClick="toggleServer"
                            android:id="@+id/server"
                            android:background="@android:color/transparent"

                            />
                    <Button
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/example"
                            android:onClick="writeDemo"
                            android:background="@android:color/transparent"/>


                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/save"
                        android:onClick="save"
                        android:background="@android:color/transparent"

                            />
                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="delete"
                        android:text="@string/delete"
                        android:background="@android:color/transparent"
                            />
                </LinearLayout>
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    <LinearLayout
                            android:focusable="true"
                            android:focusableInTouchMode="true"
                            android:layout_width="0px"
                            android:layout_height="0px"/>
                    <EditText
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:id="@+id/newfilename"
                            android:hint="@string/newfilename"
                            android:background="@android:color/transparent"
                            android:textColor="#ffffff"
                            android:nextFocusUp="@id/newfilename"
                            android:nextFocusLeft="@id/newfilename"
                            />



                </LinearLayout>
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    <Button
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:onClick="newFile"
                            android:text="@string/newfile"
                            android:background="@android:color/transparent"
                            />
                    <Button
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:onClick="new_directory"
                            android:text="@string/new_directory"
                            android:background="@android:color/transparent"
                            />

                    <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:layout_weight="2"
                            android:id="@+id/current_file"/>
                </LinearLayout>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:onClick="back_directory"
                        android:id="@+id/current_dir"/>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1">
                    <ListView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:id="@+id/listdirs"

                            />
                    <ListView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:id="@+id/listfiles"

                            />

                </LinearLayout>


            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:id="@+id/editor_layout">
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:textColor="#ffffff"
                    android:textCursorDrawable="@drawable/cursor"

                    android:gravity="top"
                    android:id="@+id/editor"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:id="@+id/log_layout">
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    <Button
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="@string/clear_log"
                            android:onClick="clearLog"
                            android:background="@android:color/transparent"


                            />
                    <Button
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/run"
                            android:onClick="run"
                            android:id="@+id/run"
                            android:background="@android:color/transparent"

                            />
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:maxLines = "5000"
                    android:scrollbars = "vertical"
                    android:gravity="bottom"
                    android:id="@+id/log"/>


            </LinearLayout>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/ui_layout">


            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            >

        <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/directory"
                android:onClick="toogle_dir_code"
                android:id="@+id/show_directory"
                android:background="@android:color/transparent"
                />


        <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ui"
                android:onClick="toggle_ui_log"
                android:id="@+id/show_ui"
                android:background="@android:color/transparent"

                />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
